# 386bsd

./: .config  .gitignore  386bsd  386bsd.ddb  386bsd.small  CONTRIB.TXT  COPYRGHT.TXT  INFO.TXT  LICENSE.TXT  README.md  RELEASE.TXT  SOFTSUB.TXT  etc  install  sys  tmp  var
conf/: newvers.sh  nfsswapvmunix.c  param.c
dev/: MAKEDEV  vga
etc/: base.profile  bin.profile  config  disktab  fstab  hosts  hosts.equiv  localtime  magic  master.passwd  motd  myname  named.boot  netstart  networks  passwd  printcap  profile  protocols  pwd.db  rc  rc.local  remote  resolv.conf  sendmail.cf  services  spwd.db  syslog.conf  ttys
kern/: dead_vnops.c  fifo_vnops.c  init_main.c  init_sysent.c  kern__physio.c  kern_acct.c  kern_clock.c  kern_descrip.c  kern_execve.c  kern_exit.c  kern_fork.c  kern_kinfo.c  kern_ktrace.c  kern_malloc.c  kern_proc.c  kern_prot.c  kern_resource.c  kern_sig.c  kern_subr.c  kern_synch.c  kern_time.c  kern_xxx.c  spec_vnops.c  subr_log.c  subr_mcount.c  subr_prf.c  subr_rlist.c  subr_xxx.c  sys_generic.c  sys_process.c  sys_socket.c  syscalls.c  sysv_shm.c  tty.c  tty_compat.c  tty_conf.c  tty_pty.c  tty_ring.c  tty_tb.c  tty_tty.c  (+14 more)
net/: bpf.c  bpf_filter.c  if.c  if_ethersubr.c  if_loop.c  if_sl.c  radix.c  raw_cb.c  raw_usrreq.c  route.c  rtsock.c  slcompress.c
netinet/: if_ether.c  in.c  in_cksum.c  in_pcb.c  in_proto.c  ip_icmp.c  ip_input.c  ip_output.c  raw_ip.c  tcp_debug.c  tcp_input.c  tcp_output.c  tcp_subr.c  tcp_timer.c  tcp_usrreq.c  udp_usrreq.c
nfs/: nfs_bio.c  nfs_node.c  nfs_serv.c  nfs_socket.c  nfs_srvcache.c  nfs_subs.c  nfs_syscalls.c  nfs_vfsops.c  (+1 more)
usr/src/usr.bin/tar/junk/: ChangeLog  configure  configure.in
(+5003 files in other folders)
